<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@mipmap/login_register_background"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_180">

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@mipmap/register_icon_phone"/>

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_account"
            android:background="@null"
            android:hint="@string/account"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="#fff"
            android:textSize="@dimen/text_size_large"/>


    </RelativeLayout>
    <View
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/img_account"
        android:background="#fff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_30">

        <ImageView
            android:id="@+id/img_accounts"
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@mipmap/login_icon_lock"/>

        <EditText
            android:id="@+id/et_accounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_accounts"
            android:background="@null"
            android:hint="@string/password"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="#fff"
            android:textSize="@dimen/text_size_large"/>

        <ImageButton
            android:background="@null"
            android:id="@+id/img_eye"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@mipmap/login_icon_eye"/>
    </RelativeLayout>
    <View
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/img_accounts"
        android:background="#fff" />
    <RelativeLayout
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住密码"
            android:textColor="#fff"
            android:buttonTint="#fff"
            />
        <TextView
            android:id="@+id/regist"
            android:layout_alignParentRight="true"
            android:text="快速注册"
            android:textColor="#fff"
            android:layout_marginTop="@dimen/dp_6"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_largerhuge"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/login"
        android:background="@drawable/cirle"
        android:textColor="#ff5f71"
        android:textSize="@dimen/text_size_large"/>
</LinearLayout>